# ops_derive2

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: example.rs  main.rs
